--- a/views/biology.erb
+++ b/views/biology.erb
@@ -10,10 +10,12 @@
    <link rel="stylesheet" type="text/css" href="css/style2.css" >
  </head>
  <body>
+   <center><img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "150px" width = "150px">
+   <a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "200px" width = "200px"></a>
+   <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "150px" width = "150px"></center>
    <div container>
-     <img  id = "erlogo" src = "https://33.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_1280.gif" id = "erlogo">
    <ul class="nav nav-pills" id = "navbar">
-  <li role="presentation" class="active"><a href="er.erb">Home</a></li>
+  <li role="presentation" class="active"><a href="er">Home</a></li>
   <li role="presentation"><a href="math.erb">Math</a></li>
   <li role="presentation"><a href="english.erb">English</a></li>
   <li role="presentation"><a href="history.erb">History</a></li>
@@ -23,7 +25,7 @@
 </ul>
  
 </ul>
-   <h1> <br> &nbsp Biology </h1>
+   <h1> <br>&nbsp Biology </h1>
 <div id = "intro">
    <h3> <br> &nbsp This website contains videos, links, textbooks, and everything you'll need for school research </h3> <br>
    <img src ="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQLMC4uXswaQrnnd5O0JHGL4FOqqbEMcEbgPdgy2MnBfbSW5aiuDQ" height ="225px" width = "300px">
